[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Configurable_Spectrograms_ev-hansen"
version = "0.0.2"
authors = [
  { name="Ev Hansen", email="ephansen@terpmail.umd.edu" },
]
description = "Files to create configurable spectrograms on a batch scale,with examples focusing on FAST EISA use."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICENSE"]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.5.1",
    "blackdoc>=0.4.6",
    "blacken-docs>=1.20.0",
    "cdflib>=1.3.6",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "numpydoc>=1.10.0",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "psutil>=7.0.0",
    "pyside6>=6.10.1",
    "pytest>=9.1.0",
    "qt-material>=2.14",
    "qt-material-icons>=0.5.0",
    "requests==2.34.2",
    "sphinx>=9.0.4",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = []

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[project.urls]
Homepage = "https://github.com/ev-hansen/Configurable-Spectrograms/"
Issues = "https://github.com/ev-hansen/Configurable-Spectrograms/issues"
